Добавил:     - вывод списка всех неудалённых услуг     - добавление услуги     - изменение услуги     - удаление услуги     - регистронезависимый поиск услуги по названию/цене/описанию     - быстрое редактирование выбранной услуги рядом с выводимым списком

--- a/SolickManagerV3_4/Pages/ListClientAndDevicePage.xaml
+++ b/SolickManagerV3_4/Pages/ListClientAndDevicePage.xaml
@@ -54,6 +54,7 @@
                         <DataGrid.CellStyle>
                             <Style TargetType="{x:Type DataGridCell}">
                                 <Setter Property="VerticalContentAlignment" Value="Center"/>
+                                <Setter Property="VerticalAlignment" Value="Center"/>
                                 <Setter Property="FontFamily" Value="Inter"/>
                                 <Setter Property="FontSize" Value="11"/>
 
