--- a/SolickManagerV3_4/Windows/AddCrossApplicationServiceWindow.xaml
+++ b/SolickManagerV3_4/Windows/AddCrossApplicationServiceWindow.xaml
@@ -44,7 +44,7 @@
                         <Label Height="24" Content="Стоимость за услугу" FontFamily="Inter" FontSize="14" FontWeight="Medium" Margin="0 0 0 5"/>
                     </StackPanel>
                     <StackPanel Grid.Column="1">
-                        <TextBox Width="auto" Height="24" Margin="0 0 0 5" Text="{Binding Title, UpdateSourceTrigger=PropertyChanged}"/>
+                        <TextBox Width="auto" Height="24" Margin="0 0 0 5" Text="{Binding SearchTitle, UpdateSourceTrigger=PropertyChanged}"/>
                         <TextBox Width="auto" Height="24" Margin="0 0 0 5" Text="{Binding Description, UpdateSourceTrigger=PropertyChanged}"/>
                         <TextBox x:Name="CostTextBox" Width="auto" Height="24" Margin="0 0 0 5" Text="{Binding Cost, UpdateSourceTrigger=PropertyChanged}"/>
                     </StackPanel>
