--- a/SolickManagerV3_4/Pages/ListApplicationPage.xaml
+++ b/SolickManagerV3_4/Pages/ListApplicationPage.xaml
@@ -485,6 +485,7 @@
                         <DataGrid.CellStyle>
                             <Style TargetType="{x:Type DataGridCell}">
                                 <Setter Property="VerticalContentAlignment" Value="Center"/>
+                                <Setter Property="VerticalAlignment" Value="Center"/>
                                 <Setter Property="FontFamily" Value="Inter"/>
                                 <Setter Property="FontSize" Value="11"/> 
                                 
