Проделанная работа: Добавлено:     - добавление характеристики     - редактировнаие характеристики     - удаление характеристики     - вывод списка характеристик     - вывод списка категорий     - быстрое редактирование характеристки     - быстрое редактирование категории

--- a/SolickManagerV3_4/App.xaml
+++ b/SolickManagerV3_4/App.xaml
@@ -398,6 +398,16 @@
             <Style.Triggers>
                 <Trigger Property="IsMouseOver" Value="True">
                     <Setter Property="Background" Value="#73BDFB"/>
+                    <Setter Property="Cursor" Value="Hand"/>
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+
+        <Style x:Key="ElementButton" TargetType="{x:Type Border}">
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver" Value="true">
+                    <Setter Property="Background" Value="Wheat"/>
+                    <Setter Property="Cursor" Value="Hand"/>
                 </Trigger>
             </Style.Triggers>
         </Style>
