--- a/SolickManagerV3_4/Windows/AddOrEditCategoryWindow.xaml
+++ b/SolickManagerV3_4/Windows/AddOrEditCategoryWindow.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SolickManagerV3_4.Windows"
         mc:Ignorable="d"
+        WindowStartupLocation="CenterScreen"
         Title="AddOrEditCategoryWindow" Height="700" Width="400">
     <Border Width="350"
             Height="620"
